Add customer contact editing
